--- a/webapp/view/app.view.xml
+++ b/webapp/view/app.view.xml
@@ -2,5 +2,11 @@
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m">
     <Page id="page" title="{i18n>title}">
+    <Button text="{i18n>showHelloButtonText}" press=".onShowHello" />
+    <Input
+        value="{/recipient/name}"
+        description="Hello {/recipient/name}"
+        valueLiveUpdate="true"
+        width="60%"/>
     </Page>
 </mvc:View>
