--- a/webapp/view/app.view.xml
+++ b/webapp/view/app.view.xml
@@ -1,12 +1,28 @@
 <mvc:View controllerName="project1.controller.app"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m">
-    <Page id="page" title="{i18n>title}">
-    <Button text="{i18n>showHelloButtonText}" press=".onShowHello" />
+    <App>
+    <pages>
+    <Page id="page" title="{i18n>homePageTitle}">
+    <content>
+    <Panel 
+        headerText="{i18n>HelloPanelTitle}"
+        class="sapUiResponsiveMargin"
+        width="auto">
+        <content>
+    <Button 
+        text="{i18n>showHelloButtonText}" 
+        press=".onShowHello"
+        class="sapUiSmallMarginEnd" />
     <Input
         value="{/recipient/name}"
         description="Hello {/recipient/name}"
         valueLiveUpdate="true"
         width="60%"/>
+        </content>
+        </Panel>
+    </content>
     </Page>
+    </pages>
+    </App>
 </mvc:View>
