--- a/webapp/view/app.view.xml
+++ b/webapp/view/app.view.xml
@@ -1,26 +1,11 @@
 <mvc:View controllerName="project1.controller.app"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m">
-    <App>
+    <App class="myAppDemoWT">
     <pages>
     <Page id="page" title="{i18n>homePageTitle}">
     <content>
-    <Panel 
-        headerText="{i18n>HelloPanelTitle}"
-        class="sapUiResponsiveMargin"
-        width="auto">
-        <content>
-    <Button 
-        text="{i18n>showHelloButtonText}" 
-        press=".onShowHello"
-        class="sapUiSmallMarginEnd" />
-    <Input
-        value="{/recipient/name}"
-        description="Hello {/recipient/name}"
-        valueLiveUpdate="true"
-        width="60%"/>
-        </content>
-        </Panel>
+        <mvc:XMLView viewName="project1.view.HelloPanel" />
     </content>
     </Page>
     </pages>
