--- a/webapp/view/app.view.xml
+++ b/webapp/view/app.view.xml
@@ -1,13 +1,7 @@
-<mvc:View controllerName="project1.controller.app"
-    xmlns:mvc="sap.ui.core.mvc"
-    xmlns="sap.m">
-    <App class="myAppDemoWT">
-    <pages>
-    <Page id="page" title="{i18n>homePageTitle}">
-    <content>
-        <mvc:XMLView viewName="project1.view.HelloPanel" />
-    </content>
-    </Page>
-    </pages>
+<mvc:View
+    controllerName="project1.controller.app"
+    xmlns="sap.m"
+    xmlns:mvc="sap.ui.core.mvc">
+    <App class="myAppDemoWT" id="app">
     </App>
 </mvc:View>
