--- a/webapp/view/Request.view.xml
+++ b/webapp/view/Request.view.xml
@@ -47,7 +47,7 @@
                             <Label text="요청 일자"/>
                             <DatePicker
                                 id="ReqDate"
-                                displayFormat="yyyy-MM"/>
+                                displayFormat="yyyy-MM-dd"/>
                             <layoutData>
                                 <layout:GridData spanXL="2" spanL="2" spanM="6" spanS="12" />
                             </layoutData>
@@ -56,14 +56,21 @@
                             <Label text="처리 상태 : "/>     
                             <Select width="100%" id="ReqStatus">
                                 <core:Item text="전체"/>
-                                <core:Item text="승인"/>
-                                <core:Item text="처리 대기"/>
-                                <core:Item text="반려"/>
+                                <core:Item text="승인" key='A'/>
+                                <core:Item text="처리 대기" key="B"/>
+                                <core:Item text="반려" key="C"/>
                             </Select>
                             <layoutData>
                                 <layout:GridData spanXL="2" spanL="2" spanM="6" spanS="12" />
                             </layoutData>
                         </VBox>
+                        <HBox justifyContent="End">
+                            <Button text="검색" type="Emphasized" press="onSearch"/>
+                            <Button text="초기화" type="Transparent" press="onReset" class="sapUiTinyMarginBegin"/>
+                            <layoutData>
+                                <layout:GridData spanXL="12" spanL="12" spanM="12" spanS="12" />
+                            </layoutData>
+                        </HBox>
                     </form:content>
                 </form:SimpleForm>
             </f:DynamicPageHeader>
